@@ -2656,6 +2656,15 @@ command to generate the output files.
     <expanded-acronym>Qt Meta Object Compiler</expanded-acronym>
     <glob pattern="*.moc"/>
   </mime-type>
+  <mime-type type="text/x-mup">
+    <sub-class-of type="text/plain"/>
+    <_comment>Mup publication</_comment>
+    <magic priority="50">
+      <match type="string" value="//!Mup" offset="0"/>
+    </magic>
+    <glob pattern="*.mup"/>
+    <glob pattern="*.not"/>
+  </mime-type>
   <mime-type type="text/x-objcsrc">
     <sub-class-of type="text/plain"/>
     <_comment>Objective-C source code</_comment>
