@@ -1,3 +1,8 @@
+2005-11-14  Christian Neumair  <chris@gnome-de.org>
+
+	* freedesktop.org.xml.in: Add Mup MIME type ("text/x-mup"). Fixes
+	#2531.
+
 2005-11-01  Bastien Nocera  <hadess@hadess.net>
 
 	* README: Fix the URLs to point to the right specs, pointed out
